fix(): components styles on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-slate-100 text-foreground;
   }
 }
